fix button styling overlapping

--- a/index.css
+++ b/index.css
@@ -46,7 +46,7 @@ body {
 
 #generate-password-btn {
   font-family: Inter;
-  font-weight: 500;
+  font-weight: 400;
   padding: 9px 15px;
   border: none;
   border-radius: 4px;
@@ -65,7 +65,7 @@ hr {
   justify-content: space-between;
 }
 
-button {
+.generated-password-btn {
   width: 211px;
   height: 39px;
   background: #273549;
